--- a/frontend/src/pages/Auth.css
+++ b/frontend/src/pages/Auth.css
@@ -16,7 +16,7 @@ html, body, #root {
 .background {
   position:fixed;
   inset: 0;
-  background-image: url('C:\Users\lenove\Desktop\Laravel-React\Laravel-React\frontend\src\assets\fond.png');
+  background-image: url('C:\Users\PMS\pert-webapp\frontend\src\assets\fond.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
